Various wip stuff and general updates... SamplesheetTool.pl updated for dumping JSON